# tld-proto

./: Makefile  buf.gen.local.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum
proto/diag/v1/: auth_service.proto  billing_service.proto  collaboration_service.proto  dependency_service.proto  device_service.proto  explore_service.proto  import_service.proto  mermaid_service.proto  notification_service.proto  org_service.proto  user_service.proto  workspace_service.proto  workspace_version_service.proto
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/diag/v1/: diag.v1.rs  diag.v1.tonic.rs
