[package]
name = "diag-proto"
version = "0.1.0"
edition = "2024"
description = "Generated protobuf/tonic bindings for the tlDiagram API"

[dependencies]
prost = "0.14"
prost-types = "0.14"
# tonic + tonic-prost are needed for the generated service client code.
# neoeinstein-tonic emits tonic_prost::ProstCodec — the runtime codec.
tonic = "0.14"
tonic-prost = "0.14"
